# luanext-lsp

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build_rs_cov.profraw  lcov.info  tarpaulin-report.html
benches/: lsp_responsiveness.rs
src/: CLAUDE.md  arena_pool.rs  document.rs  lib.rs  main.rs  message_handler.rs  symbol_index.rs
src/analysis/: mod.rs  symbol_index.rs
src/core/: cache.rs  diagnostics.rs  document.rs  heuristics.rs  metrics.rs  mod.rs
src/core/analysis/: mod.rs  symbol_index.rs
src/di/: container.rs  mod.rs
src/features/: import_utils.rs  mod.rs
src/features/edit/: code_actions.rs  completion.rs  mod.rs  rename.rs  signature_help.rs
src/features/formatting/: formatting.rs  mod.rs
src/features/hints/: inlay_hints.rs  mod.rs
src/features/navigation/: definition.rs  hover.rs  mod.rs  references.rs
src/features/semantic/: incremental.rs  mod.rs  semantic_lexeme.rs  semantic_tokens.rs
src/features/structure/: folding_range.rs  mod.rs  selection_range.rs  symbols.rs
src/impls/: compiler_bridge.rs  mod.rs
src/protocol/: connection.rs  mod.rs
src/providers/: CLAUDE.md  code_actions.rs  completion.rs  definition.rs  diagnostics.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hints.rs  references.rs  rename.rs  selection_range.rs  semantic_lexeme.rs  semantic_tokens.rs  signature_help.rs  symbols.rs
src/testing/: mocks.rs  mod.rs
src/traits/: diagnostics.rs  mod.rs  module_resolution.rs  type_analysis.rs
tests/: cache_correctness_tests.rs  completion_cross_file_tests.rs  definition_cross_file_tests.rs  di_tests.rs  features_integration_test.rs  hover_cross_file_tests.rs  incremental_document_manager_tests.rs  incremental_lsp_tests.rs  lsp_integration_tests.rs  lsp_tests.rs  message_handler_tests.rs  parse_heuristics_tests.rs  references_cross_file_tests.rs  rename_cross_file_tests.rs  semantic_cache_tests.rs  test_utils.rs
