[package]
name = "typedlua-lsp"
version = "0.1.0"
edition = "2021"
authors = ["TypedLua Contributors"]
license = "MIT"
repository = "https://github.com/forge18/typedlua-lsp"
description = "Language Server Protocol implementation for TypedLua"

[lib]
name = "typedlua_lsp"
path = "src/lib.rs"

[[bin]]
name = "typedlua-lsp"
path = "src/main.rs"

[dependencies]
# Parser and AST
typedlua-parser = { git = "https://github.com/forge18/typed-lua.git" }

# Type checker
typedlua-typechecker = { git = "https://github.com/forge18/typedlua-typechecker.git" }

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []
compiler = []

