[package]
name = "luanext-lsp"
version = "0.1.0"
edition = "2021"
authors = ["LuaNext Contributors"]
license = "MIT"
repository = "https://github.com/forge18/luanext-lsp"
description = "Language Server Protocol implementation for LuaNext"

[lib]
name = "luanext_lsp"
path = "src/lib.rs"

[[bin]]
name = "luanext-lsp"
path = "src/main.rs"

[dependencies]
# Parser and AST
luanext-parser = { git = "https://github.com/forge18/luanext-parser.git" }

# Type checker
luanext-typechecker = { git = "https://github.com/forge18/luanext-typechecker.git" }

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Memory management
bumpalo.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

